--- a/package.json
+++ b/package.json
@@ -11,21 +11,25 @@
     "start": "bun src/server/index.ts",
     "lint": "oxlint .",
     "typecheck": "tsc --noEmit",
-    "test": "bun test",
+    "test": "bun test src/server/__tests__",
+    "test:e2e": "playwright test",
+    "test:e2e:headed": "playwright test --headed",
     "prepare": "git config core.hooksPath .githooks"
   },
   "dependencies": {
+    "@xterm/addon-clipboard": "^0.2.0",
     "hono": "^4.6.10",
+    "node-pty": "^1.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "xterm": "^5.3.0",
-    "@xterm/addon-clipboard": "^0.2.0",
     "xterm-addon-fit": "^0.8.0",
     "xterm-addon-webgl": "^0.16.0",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
     "bun-types": "^1.3.5",
+    "@playwright/test": "^1.55.0",
     "@types/node": "^22.10.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
