--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Type check
         run: bun run typecheck
 
-      - name: Test
-        run: bun run test
+      - name: Test (coverage)
+        run: bun run test:coverage
 
       - name: Build
         run: bun run build
