--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ coverage
 playwright-report
 test-results
 systemd/agentboard.service
+# Nightshift plan artifacts (keep out of version control)
+.nightshift-plan
